--- a/app/index.html
+++ b/app/index.html
@@ -150,6 +150,16 @@
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
+                <a href="#portfolioModalGatorade" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i class="fa fa-search-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img src="images/web/fiddyStates.jpg" class="img-responsive" alt="">
+                </a>
+            </div>
+            <div class="col-sm-4 portfolio-item">
                 <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
