--- a/app/index.html
+++ b/app/index.html
@@ -110,6 +110,16 @@
         </div>
         <div class="row">
             <div class="col-sm-4 portfolio-item">
+                <a href="#portfolioModalGatorade" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i class="fa fa-search-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img src="images/web/gatorade.jpg" class="img-responsive" alt="">
+                </a>
+            </div>
+            <div class="col-sm-4 portfolio-item">
                 <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
@@ -150,16 +160,6 @@
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
-                <a href="#portfolioModalGatorade" class="portfolio-link" data-toggle="modal">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <i class="fa fa-search-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <img src="images/web/fiddyStates.jpg" class="img-responsive" alt="">
-                </a>
-            </div>
-            <div class="col-sm-4 portfolio-item">
                 <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
@@ -193,7 +193,7 @@
           </div>
           <div class="row">
               <div class="col-lg-4 col-lg-offset-2">
-                  <p>I develop and prettify things. I currently make the world a better place with some HTML, CSS, and JavaScript magic… I happily play around with other languages as well. </p>
+                  <p>I'm Anton Agana and I develop and prettify things. I currently make the world a better place with some HTML, CSS, and JavaScript magic… I happily play around with other languages as well. </p>
               </div>
               <div class="col-lg-4">
                   <p>I have a background in Engineering from The University of Texas, and am currently in sunny Los Angeles.  I highly enjoy improv comedy, being active, fair weather, and dried mango chili habañero.</p>
@@ -235,9 +235,6 @@
                     <ul class="list-inline">
                         <li>
                             <a href="//www.linkedin.com/in/anton23" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                        </li>
-                        <li>
-                            <a href="//twitter.com/antonmaximus" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                         </li>
                         <li>
                             <a href="//github.com/antonmaximus" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
@@ -512,6 +509,53 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+<div class="portfolio-modal modal fade" id="portfolioModalGatorade" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+                <div class="rl">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+          <div class="row">
+              <div class="col-lg-7 col-md-6 preview-page-window">
+                <a target="_blank" title="View Live Preview" href="//antonmaximus.github.io/gatorade/" class="thumbnail">
+                  <img src="images/web/gatorade.jpg" class="img-responsive" alt="Free Bootstrap 3 Themes and Templates">
+                </a>
+              
+                <ul class="list-inline preview-links">
+                  <li><a target="_blank" href="//antonmaximus.github.io/gatorade/" class="btn btn-info"><i class="fa fa-eye"></i> Live Preview</a></li>
+                  <li><a target="_blank" href="//github.com/antonmaximus/gatorade" class="btn btn-info"><i class="fa fa-github"></i> View Source on GitHub</a></li>
+                </ul>
+
+              </div>
+              <div class="col-lg-5 col-md-6 preview-page-content">
+                <h3>Mobile Interactive Ad</h3>
+                <h4>Description:</h4>
+                <p>A mobile ad that handles touch events and allows for interaction on cellphones or tablets. When the ad is viewed on a desktop, it falls back to support mouse events.</p>
+                <h4>Technologies Used:</h4>
+                <ul>
+                    <li>JavaScript</li>
+                    <li>HTML/HAML</li>
+                    <li>CSS/SCSS</li>
+                </ul>
+                <h4>Features:</h4>
+                <ul>
+                    <li>Mobile Touch Events</li>
+                    <li>No jQuery</li>
+                </ul>
+              </div>
+            </div>
+          <div class='row'>
+              <div class="col-xs-12">
+                  <br>
+                  <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                </div>
+          </div>
         </div>
     </div>
 </div>
